Reset main to match dev exactly